# A-Maze-ing

./: Makefile  README.md  a_maze_ing.py  default_config.txt  maze.txt  pyproject.toml
src/mazegen/: generator.py  utils.py
src/solver/: display.py  hex_writer.py  maze_data.py  pathfinder.py
